[package]
name = "pencilc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
ena = "0.14.2"
multipeek = "0.1.2"
owo-colors = "3.5.0"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.40"
