[package]
name = "pencilc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
derive_more = "0.99.17"
ena = "0.14.2"
inkwell = { version = "0.2.0", features = ["llvm16-0"] }
multipeek = "0.1.2"
owo-colors = "3.5.0"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.40"
